--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,8 +49,8 @@ nav > ul > li{
   }
 
   .chica{
-      width: 400px;
-      max-width: 400px;
+      width: 350px;
+      max-width: 350px;
   }
   .article{
       padding-bottom: 3rem;
@@ -115,5 +115,10 @@ nav > ul > li{
         flex-direction: row;
         padding: 4rem;
         justify-content: space-between;
+    }
+
+    .chica{
+        width: 400px;
+        max-width: 400px;
     }
   }
